# MagicHomeCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: ExampleMagicHomeProtocol.hpp  MagicHomeProtocol.hpp  main.cpp
